# ctestprobe

./: .gitattributes  .gitignore  .semantic-release.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ctestprobe.pc.in
.github/workflows/: ci.yml  handle-tags.yml  release.yml
cmake/: ctestprobe-config.cmake.in
examples/: example1.c
include/: ctestprobe.h  list.h
packaging/homebrew/: ctestprobe.rb
scripts/: amalgamate.sh
src/: ctestprobe.c  list.c
tests/: test_ctestprobe.c
